--- a/src/mvp.ipynb
+++ b/src/mvp.ipynb
@@ -501,6 +501,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pregnancies       93\n",
+      "Glucose            4\n",
+      "BloodPressure     23\n",
+      "SkinThickness    172\n",
+      "Insulin          294\n",
+      "BMI                7\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "zero_counts = (training_features == 0).sum()\n",
+    "print(zero_counts[zero_counts > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -630,6 +654,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
+      "count   614.000000  614.000000     614.000000     614.000000  614.000000   \n",
+      "mean      3.851792  121.371336      72.299674      29.571661  143.791531   \n",
+      "std       3.403173   29.929344      11.969977       8.989331   91.030061   \n",
+      "min       0.000000   44.000000      24.000000       7.000000   14.000000   \n",
+      "25%       1.000000  100.000000      64.000000      25.000000  120.500000   \n",
+      "50%       3.000000  117.500000      72.000000      29.500000  126.000000   \n",
+      "75%       6.000000  138.000000      80.000000      33.000000  130.000000   \n",
+      "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
+      "\n",
+      "              BMI  DiabetesPedigreeFunction         Age  \n",
+      "count  614.000000                614.000000  614.000000  \n",
+      "mean    32.585342                  0.473090   33.245928  \n",
+      "std      6.885077                  0.339908   11.742608  \n",
+      "min     18.200000                  0.078000   21.000000  \n",
+      "25%     27.600000                  0.239250   24.000000  \n",
+      "50%     32.400000                  0.370500   29.000000  \n",
+      "75%     36.575000                  0.628500   41.000000  \n",
+      "max     67.100000                  2.420000   72.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "cols_to_replace = ['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']\n",
+    "training_features[cols_to_replace] =training_features[cols_to_replace].replace(0, np.nan)\n",
+    "\n",
+    "training_features[cols_to_replace] = training_features[cols_to_replace].fillna(training_features[cols_to_replace].median())\n",
+    "\n",
+    "print(training_features.describe())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -640,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,14 +726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model is 77.9% accurate on the test data\n"
+      "Model is 72.1% accurate on the test data\n"
      ]
     }
    ],
